force-app/main/default/objects/Job_Posting__c/Job_Posting__c.object-meta.xml
<CustomObject>
    <description>Its a junction object that relates to Departments(Accounts) and Jobs. Each Job can be posted by multiple departments. That is the reason for junction Object</description>
    <label>Job Posting</label>
    <nameField>
        <displayFormat>JobPos-{0000}</displayFormat>
        <label>Job Posting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>